--- a/src/app/components/cards/compact-job-card/compact-job-card.component.scss
+++ b/src/app/components/cards/compact-job-card/compact-job-card.component.scss
@@ -11,7 +11,8 @@
       color: black;
 
       .job-header {
-        @include truncate-owerflowing-text-multiline($font-size: $fs-l, $line-height: 1.1, $lines-to-show: 3, $excerpt-bg: $white);
+        font-size: $fs-l;
+        @include truncate-owerflowing-text-multiline($line-height: 1.1, $lines-to-show: 3);
       }
     }
 
@@ -31,7 +32,8 @@
       margin-top: 10px;
 
       .job-description {
-        @include truncate-owerflowing-text-multiline($font-size: $fs-m0, $line-height: 1.3, $lines-to-show: 2, $excerpt-bg: $white);
+        font-size: $fs-m0;
+        @include truncate-owerflowing-text-multiline($line-height: 1.3, $lines-to-show: 2);
       }
     }
   }
