--- a/src/app/components/cards/compact-job-card/compact-job-card.component.scss
+++ b/src/app/components/cards/compact-job-card/compact-job-card.component.scss
@@ -1,65 +1,23 @@
 @import '../../../styles/colors';
 @import '../../../styles/typography';
 
-
 .job-card {
   width: 260px;
 
   .job-content-container {
-
-    .job-header-container {
-      color: black;
-
-      .job-header {
-        font-size: $fs-l;
-        @include truncate-owerflowing-text-multiline($line-height: 1.1, $lines-to-show: 3);
-      }
-    }
-
-    .job-company {
-      color: $color-primary-cerise;
-      font-weight: bold;
-      @include truncate-owerflowing-text;
-    }
-
-    .job-city {
-      margin-top: 5px;
-      text-transform: uppercase;
-      @include truncate-owerflowing-text;
-    }
-
     .job-description-container {
       margin-top: 10px;
-
-      .job-description {
-        font-size: $fs-m0;
-        @include truncate-owerflowing-text-multiline($line-height: 1.3, $lines-to-show: 2);
-      }
     }
   }
 
   .job-salary-container {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+  }
 
-    .job-salary {
-      font-size: $fs-xxxxl;
-      color: $color-primary-cerise;
-      @include truncate-owerflowing-text;
-    }
-
-    .job-salary-currency {
-      font-size: $fs-xxl;
-      @include truncate-owerflowing-text;
-    }
-
-    .job-salary-additional-info {
-      margin-top: 10px;
-
-      .job-hours,
-      .job-total-salary {
-        @include truncate-owerflowing-text;
-        font-weight: bold;
-        text-transform: uppercase;
-      }
-    }
+  .job-salary-additional-info {
+    display: flex;
+    flex-wrap: nowrap;
   }
 }
