--- a/src/app/components/text/basic-text/basic-text.component.scss
+++ b/src/app/components/text/basic-text/basic-text.component.scss
@@ -11,6 +11,11 @@ $text-line-height: 1.5;
   text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-decoration: none;
+  font-style: normal;
+  font-weight: normal;
+  text-align: left;
+  text-shadow: none;
 
   @include wrap-long-words();
 }
@@ -23,6 +28,10 @@ $text-line-height: 1.5;
 
 .uppercase {
   text-transform: uppercase;
+}
+
+.italic {
+  font-style: italic;
 }
 
 .small {
@@ -50,19 +59,19 @@ $text-line-height: 1.5;
 }
 
 .white {
-  color: $white;
+  color: $white !important;
 }
 
 .black {
-  color: $black;
+  color: $black !important;
 }
 
 .pink {
-  color: $color-cerise-500;
+  color: $color-cerise-500 !important;
 }
 
 .gray {
-  color: $color-gray-300;
+  color: $color-gray-300 !important;
 }
 
 .center {
