--- a/src/app/styles/semantic-ui-modifications.scss
+++ b/src/app/styles/semantic-ui-modifications.scss
@@ -2,6 +2,10 @@
 @import './colors';
 @import './typography';
 
+.ui.styled.accordion .accordion .title, .ui.styled.accordion .title {
+  border-top: none;
+}
+
 .ui.form input:not([type]), .ui.form input[type=text], .ui.form input[type=email], .ui.form input[type=search], .ui.form input[type=password], .ui.form input[type=date], .ui.form input[type=datetime-local], .ui.form input[type=tel], .ui.form input[type=time], .ui.form input[type=file], .ui.form input[type=url], .ui.form input[type=number] {
   font-family: $default-font-family;
 }
