--- a/src/app/components/bars/cookie-bar/cookie-bar.component.scss
+++ b/src/app/components/bars/cookie-bar/cookie-bar.component.scss
@@ -6,40 +6,14 @@
   background: $color-blue-500;
   color: $white;
   padding: 20px 32px;
-  @media screen and (min-width: $mobile-max-width) {
-    text-align: left;
-  }
 
   .cookie-message-inner {
-    max-width: 784px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
-    @media screen and (min-width: $mobile-max-width) {
-      display: flex;
-    }
-
-    p {
-      margin: auto;
-
-      .read-more {
-        display: block;
-        margin: 15px 0;
-        color: inherit;
-        text-decoration: underline;
-
-        &:hover {
-          text-decoration: none;
-        }
-        @media screen and (min-width: $mobile-max-width) {
-          display: inline;
-          margin: 0;
-        }
-      }
-    }
-
-    .cookies-button {
-      @media screen and (min-width: $mobile-max-width) {
-        margin: auto;
-      }
+    @media screen and (max-width: $mobile-max-width) {
+      flex-direction: column;
     }
   }
 }
