--- a/src/app/components/headers/welcome-header/welcome-header.component.scss
+++ b/src/app/components/headers/welcome-header/welcome-header.component.scss
@@ -4,7 +4,6 @@
 
 .welcome-header-container {
   background: linear-gradient($color-cerise-600, $color-primary-cerise);
-  color: $white;
   display: flex;
   flex-flow: row-reverse;
 
@@ -39,25 +38,15 @@
       width: auto;
     }
 
-    .welcome-header-info-title {
-      @include wrap-long-words;
-      color: $white;
-      text-shadow: 0 0 3px rgba(0, 0, 0, .75);
-    }
-
-    .welcome-header-info-subtitle {
-      padding-top: 1em;
-      padding-bottom: .2em;
-    }
-
-    .welcome-header-info-description-container {
-      margin: 0 auto;
-      font-size: 14px;
-    }
-
     .welcome-header-button-container {
       display: inline-block;
       margin-top: 20px;
+    }
+
+    .welcome-header-button-outer-container {
+      @media screen and (max-width: $tablet-max-width) {
+        justify-content: center;
+      }
     }
   }
 
