--- a/src/app/styles/colors.scss
+++ b/src/app/styles/colors.scss
@@ -28,7 +28,7 @@ $color-gray-800: #222531;
 
 $color-background: #E8EBEE;
 
-$black: #000000;
+$black: rgba(0,0,0,.87);
 $white: #FFFFFF;
 
 $color-primary-cerise: $color-cerise-500;
