--- a/src/app/components/navbars/app-navbar/app-navbar.component.scss
+++ b/src/app/components/navbars/app-navbar/app-navbar.component.scss
@@ -14,7 +14,7 @@
   }
   @media screen and (max-width: $computer-large-min-width) {
     width: 100%;
-    max-width: 100vw;
+    max-width: 100%;
   }
 
   .app-navbar-inner-container {
