--- a/src/app/views/my-jobs/applications/applications.component.html
+++ b/src/app/views/my-jobs/applications/applications.component.html
@@ -1,6 +1,6 @@
 <div class="applications">
   <div class="my-job-content">
-    <div *ngIf="applications.length > 0">
+    <div *ngIf="applications && applications.length > 0">
       <my-jobs-item *ngFor="let application of applications" [application]="application"></my-jobs-item>
     </div>
   </div>
