Updated app max width to 1560px

--- a/src/app/components/navbars/app-navbar/app-navbar.component.scss
+++ b/src/app/components/navbars/app-navbar/app-navbar.component.scss
@@ -8,11 +8,11 @@
   color: $color-gray-200;
   background-color: $color-gray-25;
 
-  @media screen and (min-width: $computer-large-min-width) {
-    width: $computer-large-min-width;
+  @media screen and (min-width: $app-max-width) {
+    width: $app-max-width;
     margin: 0 auto;
   }
-  @media screen and (max-width: $computer-large-min-width) {
+  @media screen and (max-width: $app-max-width) {
     width: 100%;
     max-width: 100%;
   }
