--- a/src/app/styles/dimensions.scss
+++ b/src/app/styles/dimensions.scss
@@ -6,7 +6,7 @@ $mobile-min-width: 0px;
 $mobile-max-width: 767px;
 $tablet-min-width: 768px;
 $tablet-max-width: 991px;
-$computer-small-min-width: 992px;
-$computer-small-max-width: 1200px;
-$computer-large-min-width: 1201px;
-$computer-large-max-width: 999999px;
+$computer-min-width: 992px;
+$computer-max-width: 999999px;
+
+$app-max-width: 1560px;
