--- a/src/app/components/navigations/default-navigation/default-navigation.component.scss
+++ b/src/app/components/navigations/default-navigation/default-navigation.component.scss
@@ -8,17 +8,18 @@
   z-index: 1001;
   pointer-events: none;
   height: 100%;
-  @media screen and (min-width: $computer-large-min-width) {
-    width: $computer-large-min-width;
+
+  @media screen and (min-width: $app-max-width) {
+    width: $app-max-width;
     margin: 0 auto;
   }
-  @media screen and (max-width: $computer-large-min-width) {
+  @media screen and (max-width: $app-max-width) {
     width: 100%;
   }
 
   .menu-container {
     height: 100%;
-    
+
     .pusher {
       position: absolute;
       left: calc((100% - 100vw)/2);
