--- a/src/app/components/pagers/basic-pager/basic-pager.component.scss
+++ b/src/app/components/pagers/basic-pager/basic-pager.component.scss
@@ -2,10 +2,11 @@
 @import '../../../styles/typography';
 
 .pager-container {
-  font-size: $fs-m;
+  font-size: 16px;
   background-color: $color-gray-25;
 
   .pager-inner-container {
+    align-items: center;
     max-width: 600px;
     margin: 0 auto;
   }
