--- a/src/app/components/buttons/base-button/base-button.component.scss
+++ b/src/app/components/buttons/base-button/base-button.component.scss
@@ -1,7 +1,8 @@
 @import '../../../styles/colors';
 @import '../../../styles/typography';
 
-$button-font: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+$button-font: $text-font-family;
+$button-font-arabic: $text-font-family-arabic;
 
 // GENERAL
 .btn {
@@ -14,48 +15,47 @@ $button-font: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
   outline:none !important;
   text-align: center;
   text-decoration: none;
-  text-transform: uppercase;
   @include truncate-owerflowing-text;
 
   &:disabled {
     opacity: 0.5;
   }
 }
+
+.arabic {
+  font-family: $button-font-arabic;
+}
+
 // FLUID
 .btn.fluid {
   width: 100%;
 }
 // SIZE
 .btn.tiny {
-  font-size: $fs-s;
+  font-size: 12px;
   padding: 0 10px;
   min-width: 100px;
 }
 
 .btn.small {
-  font-size: $fs-m0;
+  font-size: 14px;
   padding: 6px 25px;
   min-width: 100px;
   padding: 2px 25px;
 }
 
 .btn.medium {
-  font-size: $fs-m;
+  font-size: 16px;
   padding: 8px 30px;
   min-width: 150px;
 }
 
 .btn.large {
-  font-size: $fs-l0;
+  font-size: 20px;
   padding: 8px 35px;
   min-width: 180px;
 }
 
-.btn.huge {
-  font-size: $fs-l0;
-  padding: 8px 35px;
-  min-width: 180px;
-}
 // PRIMARY
 .btn.primary {
   color: $white;
@@ -125,16 +125,4 @@ $button-font: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
   color: $white;
   background-color: $color-cerise-600;
   border-color: $color-cerise-600;
-}
-// INACTIVE BUTTONS
-.btn.inactive-light {
-  color: rgba(255, 255, 255, .5);
-  background-color: rgba(255, 255, 255, .2);
-  border-color: rgba(255, 255, 255, .15);
-}
-
-.btn.inactive-dark {
-  color: rgba(34, 37, 49, .4);
-  background-color: rgba(34, 37, 49, .1);
-  border-color: rgba(34, 37, 49, .05);
 }
