--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,5 +12,5 @@ html {
 
 body {
   background-color: $color-background !important;
-  font-family: $default-font-family;
+  font-family: $text-font-family;
 }
