Sorted the max width so the footer sections are more centered

--- a/src/app/components/footers/default-footer/default-footer.component.scss
+++ b/src/app/components/footers/default-footer/default-footer.component.scss
@@ -6,6 +6,11 @@
   background: url('/assets/images/footer-background.jpg') no-repeat;
   background-size: cover;
 
+  .sections-container {
+    max-width: 1040px;
+    margin: 0 auto;
+  }
+
   .social-media-container {
     display: flex;
     @media screen and (max-width: $tablet-max-width) {
