--- a/src/app/components/footers/default-footer/default-footer.component.scss
+++ b/src/app/components/footers/default-footer/default-footer.component.scss
@@ -3,8 +3,9 @@
 
 .footer-container {
   background-color: $color-secondary-gray;
-  background: url('/assets/images/footer-background.jpg') no-repeat;
+  background: url('/assets/images/footer-background.jpg');
   background-size: cover;
+  background-repeat: no-repeat;
 
   .sections-container {
     max-width: 1040px;
