--- a/src/app/components/headers/basic-border-header/basic-border-header.component.scss
+++ b/src/app/components/headers/basic-border-header/basic-border-header.component.scss
@@ -2,7 +2,11 @@
 @import '../../../styles/dimensions';
 
 .basic-border-header-container {
-  background-color: $color-primary-cerise !important;
+  background-color: $color-gray-800 !important;
+  background: url('/assets/images/dark-pattern-background.jpg') !important;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  background-position: center center !important;
   height: $basic-border-header-height;
   padding: 0 !important;
   display: flex;
