Replace the pink background with a darker pattern at profile page

--- a/src/app/components/headers/user-profile-header/user-profile-header.component.scss
+++ b/src/app/components/headers/user-profile-header/user-profile-header.component.scss
@@ -1,6 +1,10 @@
 @import '../../../styles/colors';
 
 .user-profile-header-container {
-  background-color: $color-primary-cerise;
+  background-color: $color-gray-800;
+  background: url('/assets/images/dark-pattern-background.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
   padding-bottom: 20px;
 }
