--- a/src/app/components/navigations/default-navigation/default-navigation.component.scss
+++ b/src/app/components/navigations/default-navigation/default-navigation.component.scss
@@ -19,15 +19,27 @@
 
   .menu-container {
     height: 100%;
+    position: relative;
 
-    .pusher {
+    &.visible {
+      pointer-events: auto;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+      overflow: hidden;
+      min-height: 100%;
+      z-index: 2;
+      background-color: rgba(0,0,0,.85);
+    }
+
+    .menu-inner-container {
       position: absolute;
-      left: calc((100% - 100vw)/2);
-      width: 100vw;
-
-
-      &.dimmed {
-        pointer-events: auto;
+      right: 0;
+      pointer-events: auto;
+      height: 100%;
+      overflow-y: scroll;
+      width: 375px;
+      @media screen and (max-width: $mobile-max-width) {
+        width: 100%;
       }
     }
   }
