--- a/src/app/components/items/application-item/application-item.component.scss
+++ b/src/app/components/items/application-item/application-item.component.scss
@@ -1,6 +1,6 @@
-@import '../../styles/colors';
+@import '../../../styles/colors';
 
-.my-jobs-item {
+.application-item {
   display: flex;
   flex-wrap: nowrap;
   width: 100%;
