Update font sizes according to Andrews numbers (skipped the mobile variation of font sizes since can’t make pixel perfect components if the font vary between devices)

--- a/src/app/components/text/basic-text/basic-text.component.scss
+++ b/src/app/components/text/basic-text/basic-text.component.scss
@@ -21,15 +21,15 @@
 }
 
 .small {
-  font-size: 12px;
+  font-size: 10px !important;
 }
 
 .medium {
-  font-size: 16px;
+  font-size: 12px !important;
 }
 
 .large {
-  font-size: 20px;
+  font-size: 14px !important;
 }
 
 .light {
