--- a/src/app/components/links/basic-link/basic-link.component.scss
+++ b/src/app/components/links/basic-link/basic-link.component.scss
@@ -23,15 +23,24 @@
 }
 
 .small {
-  font-size: 12px;
+  font-size: 10px;
+  @media screen and (max-width: $mobile-max-width) {
+    font-size: 10px;
+  }
 }
 
 .medium {
-  font-size: 16px;
+  font-size: 12px;
+  @media screen and (max-width: $mobile-max-width) {
+    font-size: 12px;
+  }
 }
 
 .large {
-  font-size: 20px;
+  font-size: 14px;
+  @media screen and (max-width: $mobile-max-width) {
+    font-size: 14px;
+  }
 }
 
 .light {
