--- a/src/app/styles/typography.scss
+++ b/src/app/styles/typography.scss
@@ -61,7 +61,7 @@
   font-style: normal;
   font-weight: normal;
   text-shadow: none;
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 700;
 
   @include wrap-long-words();
@@ -77,7 +77,7 @@
   font-style: normal;
   font-weight: normal;
   text-shadow: none;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 500;
 
   @include wrap-long-words();
@@ -158,32 +158,32 @@ body {
 }
 
 h1 {
-  font-size: 42px;
+  font-size: 28px !important;
   font-weight: 700;
 }
 
 h2 {
-  font-size: 36px;
+  font-size: 20px !important;
   font-weight: 700;
 }
 
 h3 {
-  font-size: 24px;
+  font-size: 18px !important;
   font-weight: 700;
 }
 
 h4 {
-  font-size: 18px;
+  font-size: 16px !important;
   font-weight: 700;
 }
 
 h5 {
-  font-size: 16px;
+  font-size: 12px !important;
   font-weight: 700;
 }
 
 h6 {
-  font-size: 14px;
+  font-size: 10px !important;
   font-weight: 700;
 }
 
