Modify missing traits form button size

--- a/src/app/components/forms/user-missing-traits-next-form/user-missing-traits-next-form.component.html
+++ b/src/app/components/forms/user-missing-traits-next-form/user-missing-traits-next-form.component.html
@@ -188,6 +188,7 @@
     [showSuccessMessage]="false"
     [submitFail]="submitFail"
     [submitSuccess]="submitSuccess"
+    size="medium"
     *ngIf="!informationProvided">
   </form-submit-button>
 
