--- a/src/app/styles/typography.scss
+++ b/src/app/styles/typography.scss
@@ -61,7 +61,7 @@
   font-style: normal;
   font-weight: normal;
   text-shadow: none;
-  font-size: 18px;
+  font-size: 18px !important;
   font-weight: 700;
 
   @include wrap-long-words();
@@ -77,7 +77,7 @@
   font-style: normal;
   font-weight: normal;
   text-shadow: none;
-  font-size: 12px;
+  font-size: 12px !important;
   font-weight: 500;
 
   @include wrap-long-words();
