--- a/src/app/styles/semantic-ui-modifications.scss
+++ b/src/app/styles/semantic-ui-modifications.scss
@@ -21,6 +21,12 @@
   font-family: $text-font-family;
 }
 
+.ui.modal.basic {
+  .close.icon {
+    display: none;
+  }
+}
+
 .ui.form {
   @include text();
 }
