--- a/src/app/styles/typography.scss
+++ b/src/app/styles/typography.scss
@@ -199,13 +199,17 @@ ul {
 
 li {
   list-style: none;
+  list-style-position: inside;
+  text-indent: -1.6em;
+  padding-left: 1.6em;
 }
 
 li:before {
   content: "\25CE";
+  color: $black;
   font-weight: bold;
-  font-size: 2.4em;
+  font-size: 1em;
   vertical-align: middle;
   line-height: $text-line-height;
-  padding: 0 5px;
+  padding: 0 0.3em;
 }
