Dropdown border fix

--- a/src/app/styles/semantic-ui-modifications.scss
+++ b/src/app/styles/semantic-ui-modifications.scss
@@ -27,6 +27,10 @@ textarea {
   border-radius: 1rem !important;
 }
 
+.ui.upward.selection.dropdown.visible {
+  border-radius: 0 0 1rem 1rem !important;
+}
+
 .ui.selection.dropdown .menu {
   border-radius: 0 0 1rem 1rem !important;
 }
